--- a/style.css
+++ b/style.css
@@ -2,9 +2,6 @@
 *{
   margin: 0;
   padding: 0;
-
-
-
 }
 .header{
   min-height: 100vh;
@@ -116,6 +113,15 @@ nav .fa-solid{
   z-index: -1;
 }
 @media(max-width: 700px){
+  .header{
+    min-height: 200vh;
+    width: 100;
+    background-image: linear-gradient(rgba(9,4,30,0.7),rgba(9,4,30,0.7)),url("../web/image/usada_nousagi.jpg");
+    background-position: center;
+    background-size: cover;
+    position: relative;
+  }
+
   .text-box h1{
       font-size: 62px;
 
@@ -428,8 +434,6 @@ h3{
   background: #eff7fa;
   transition: 1s;
 }
-
-
 
 
 
