--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 .header{
   min-height: 100vh;
   width: 100;
-  background-image: linear-gradient(rgba(9,4,30,0.7),rgba(9,4,30,0.7)),url("../web/image/usada_nousagi.jpg");
+  background-image: linear-gradient(rgba(9,4,30,0.7),rgba(9,4,30,0.7)),url("https://github.com/Jmain26/kiana.github.io/blob/main/image/usada_nousagi.jpg?raw=true");
   background-position: center;
   background-size: cover;
   position: relative;
@@ -295,7 +295,7 @@ h3{
   padding-top: 100px;
   border-radius: 0px;
   padding-bottom: 100px;
-  background-image: linear-gradient(rgba(0,0,0,0.0),rgba(0,0,0,0.0)),url("../web/image/shock.jpg");
+  background-image: linear-gradient(rgba(0,0,0,0.0),rgba(0,0,0,0.0)),url("https://github.com/Jmain26/kiana.github.io/blob/main/image/shock.jpg?raw=true");
 
 }
 .othersite-col{
@@ -402,7 +402,7 @@ h3{
 .feedback{
   margin: 100px auto;
   width: 80%;
-  background-image:  linear-gradient(rgba(9,4,30,0.7),rgba(9,4,30,0.7)),url("../web/image/usada_nousagi.jpg");
+  background-image:  linear-gradient(rgba(9,4,30,0.7),rgba(9,4,30,0.7)),url("https://github.com/Jmain26/kiana.github.io/blob/main/image/usada_nousagi.jpg?raw=true");
   background-position: center;
   background-size: cover;
   border-radius: 10px;
