--- a/style.css
+++ b/style.css
@@ -116,7 +116,7 @@ nav .fa-solid{
   .header{
     min-height: 200vh;
     width: 100;
-    background-image: linear-gradient(rgba(9,4,30,0.7),rgba(9,4,30,0.7)),url("../web/image/usada_nousagi.jpg");
+    background-image: linear-gradient(rgba(9,4,30,0.7),rgba(9,4,30,0.7)),url("https://github.com/Jmain26/kiana.github.io/blob/main/image/usada_nousagi.jpg?raw=true");
     background-position: center;
     background-size: cover;
     position: relative;
